# data_processing_pipeline

./: .bazelrc  .pylintrc  BUILD  Doxyfile  MODULE.bazel  README.md  requirements_lock.txt
.github/workflows/: ci.yml
apps/cpp_cli_tool/: BUILD  cli.cc
bazel-macro/: pytest_test.bzl
examples/: BUILD  example.json  main.cc  main.h
libs/math/: BUILD  defs.bzl  generate_stats.cc  stats.cc  stats.h
libs/parser/: BUILD  csv_parser.cc  csv_parser.h  json_parser.cc  json_parser.h  parser.h  parser_factory.cc  parser_factory.h
libs/utils/: BUILD
macros/: macros.bzl
output/test/: BUILD
python_tools/: BUILD
python_tools/data_cleaner/: BUILD  cleaner.py
python_tools/pytest/: BUILD
python_tools/report_generator/: BUILD  generator.py
rules/: rules.bzl
scripts/: BUILD  run_pipeline.sh
tests/cpp/: BUILD  example.csv  test_csv_parser.cc  test_json_parser.cc  test_stats.cc
tests/python/: BUILD  example1.csv  example1.json  example1input.csv  example1output.csv  example1output.json  example2.csv  example2.json  example2output.csv  example3.csv  example3.json  example3input.json  example4.json  macros.bzl  test_cleaner.py  test_generator.py  test_generator_empty.py
tests/python/pytest/: pytest_wrapper.py
